# process-csgo-star-team

./: .gitignore  Abstract.py  CreateLog.py  CreateXESfile.py  Experiment.ipynb  Firstkill.py  FlashBangAnalysis.py  MainNotebook.ipynb  OptimizedLog.py  README.md  bomb_diffuser.ipynb  csgo_EventLog.xes  csgo_EventLogAbstract.xes  csgo_EventLogFirstKill.xes  debug.py  first_blood_event_log.xes  main.py  parse_all_files.py  parser.py  parserWorker.py  pyproject.toml  requirements.txt  round1_positions_with_place.csv  round_positions_with_place.csv  testing.py
